@@ -1,5 +1,11 @@
 2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Drawing/MapDrawer.cs: draw theming
+	* Data/Shapefile/DBaseIIIFile.cs: trim extra spaces from character
+	  field values
+
+2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Feature.cs, Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs,
 	  Data/SimpleFeatureSource.cs: hook up shapefile
 
